--- a/mqttalarm.service
+++ b/mqttalarm.service
@@ -1,4 +1,7 @@
 [Unit]
+# This is for ~/.config/systemd/user
+# systemctl --user enable mqttalarm
+# systemctl --user start mqttalarm
 Description=MQTT Alarm
 After=network-online.target
 
